--- a/runrun/p5js/index.html
+++ b/runrun/p5js/index.html
@@ -17,7 +17,7 @@
     <p><a href="02.html">1.花</a></p>
     <p><a href="04.html">键盘输入</a></p>
     <p><a href="05.html">输入字符串</a></p>
-   
+    <p><a href="06.html">高级输入字符串</a></p>
     <p><a href="03.html">手绘</a></p>
     
 
